# search-engine

./: .gitignore  CMakeLists.txt  KaggleFinanceParseEngine.cpp  KaggleFinanceParseEngine.h  KaggleFinanceSourceEngine.cpp  KaggleFinanceSourceEngine.h  ParseEngine.cpp  ParseEngine.h  README.md  SearchEngine.cpp  SearchEngine.h  SourceEngine.h  main.cpp
